Fix : fixed the broken UI of discord users in mobile view with some UI enhancements. (#551)
* fix : fix the broken UI of discord users in mobile view

* style : Modified style.css

* Update UserDetailsSection.js

* Tests: Added tests

---------

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   --failure-color: #f44336;
   --lightblue-color: #0d6efd;
   --lightgray-color: #d7d6d6;
+  --link-color: #4d4dff;
 }
 
 body {
